# aclanthology-translate

./: README.md  main.py  pyproject.toml
outputs/: 2022acl-long_gpt-3.5-turbo.jsonl  2022acl-short_gpt-3.5-turbo.jsonl  2022acl-srw_gpt-3.5-turbo.jsonl  2022findings-acl_gpt-3.5-turbo.jsonl
